# tstrings

./: .travis.yml  CMakeLists.txt  README.md
cmake/: tstrings_cppConfig.cmake.in
include/tstrings_cpp/: tstrings-inl.h  tstrings.h
test/: CMakeLists.txt
test/data/: small_utf8.expected  small_utf8.template
test/tstrings_cpp/: interpolate.cpp
